# cad-view

./: .gitignore  README.md  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  cad_native.cpp
android/app/src/main/kotlin/com/example/cad_view/: CadNative.kt  MainActivity.kt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: cad_native.dart  main.dart  viewer_screen.dart
web/: index.html  manifest.json
